[package]
name = "elite-rs"
version = "0.1.0"
authors = ["Merlin Attila Fejzuli"]
edition = "2021"
repository = "https://github.com/fejzuli/elite-rs"
license-file = "LICENSE"

[lib]
name = "elite"

[[bin]]
name = "elite"
required-features = ["cli"]

[dependencies]
clap = { version = "4.5.17", features = ["derive"], optional = true }
directories = "5.0.1"
human-panic = { version = "2.0.1", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
time = { version = "0.3.36", features = ["serde", "serde-well-known"] }

[features]
cli = ["dep:clap", "dep:human-panic"]
